@@ -15,6 +15,7 @@ $context = array();
 			<add><![CDATA[
 // Unserialize the array of pretty board URLs
 $context = array('pretty' => array(
+	'action_array' => unserialize($modSettings['pretty_action_array']),
 	'board_urls' => unserialize($modSettings['pretty_board_urls']),
 	'db_count' => 0,
 ));
@@ -32,6 +33,7 @@ cleanRequest();
 			<add><![CDATA[
 // Unserialize the array of pretty board URLs
 $context = array('pretty' => array(
+	'action_array' => unserialize($modSettings['pretty_action_array']),
 	'board_urls' => unserialize($modSettings['pretty_board_urls']),
 	'db_count' => 0,
 ));
